
Changes since 1.11.0

Additions

- Added static cookie storage accessor to http fetcher

- Added requirealldeleted query parameter

- Added authenticationInfo accessor for fetch error userInfo

- Added yt:name attribute to media:thumbnail

- Added calendar max-attendees query parameter and free/busy feeds

Changes

- Tightened up syntax for use with c++ compilers

Bugs Fixed

- Fixed leak in elements allocated with GDataXMLElement's initWithXMLString:
  (thanks dshimshoni)

- Made cookies set by a redirect immediately available in the new request
  (thanks ehoracek)


Release 1.11.0
1-December-2010
Changes since 1.10.0

Additions

- Added download to a file path or a file handle in GDataHTTPFetcher

- Added comments to http fetcher logging

- Added support for chunked uploads to Picasa Web Albums

- Added keyed roles to ACLs

- Added channel standard feeds URL generator, caption track format query
  parameter and caption track derived element, and totalUploadViews statistics
  attribute for YouTube

- Added drawings to DocList API

Changes

- Deployment target for framework build is now 10.5

- Removed unused class GDataContactWebsite

- Most APIs now use https URLs

- YouTube ratings are now yt:rating elements for like/dislike counts, not
  gd:rating elements

- YouTube sample app has relaxed metadata requirements for uploading

- YouTube API no longer uses client IDs, and no longer uses a custom auth URL

- Contacts API setters now replace empty strings with nil, and birthday
  now has an NSDate getter/setter

- OAuth tokens are stripped from http fetcher logs

Bugs Fixed

- Fixed signing of OAuth paths with non-alphanumeric characters

- Fixed OAuth sign-in when using an authentication object with a prior
  token secret (thanks ddickison)

- Stop printing _cmd in a macro as a C-string to quiet a clang warning (thanks
  j abley)

- Fixed exception when setting geo location to nil (thanks Kazz)

- Fixed GDataEXIFTag's +tagWithName:
